syntax = "proto3";

package order;
import "customer.proto";

message Order {
  string id = 1;
  string total = 2;
  Customer customer = 3;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message SearchOrdersRequest {
  string query = 1;
}

message SearchOrdersResponse {
  repeated Order orders = 1;
}

message CreateOrderRequest {
  string order_id = 1;
  string total = 2;
  string customer_id = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string order_id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
}

service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc SearchOrders(SearchOrdersRequest) returns (SearchOrdersResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}








/*
message CreateOrderRequest {
  string order_id = 1;
  string total = 2;
  Customer customer = 3;
}

message CreateOrderResponse {
  Order order = 1;
}


message UpdateOrderRequest {
  string customer_id = 1;
  string name = 2;
  string phone = 3;
}

message UpdateOrderResponse {
  Order customer = 1;
}

message DeleteOrderRequest {
  string customer_id = 1;
}

message DeleteOrderResponse {
  bool success = 1;
}

service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc SearchOrders(SearchOrdersRequest) returns (SearchOrdersResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

*/